--- a/startbootstrap-clean-blog-jekyll-master/_config.yml
+++ b/startbootstrap-clean-blog-jekyll-master/_config.yml
@@ -2,8 +2,8 @@ title:             Clean Blog
 email:             your-email@example.com
 description:       A Blog Theme by Start Bootstrap
 author:            Start Bootstrap
-baseurl:           "/startbootstrap-clean-blog-jekyll"
-url:               "http://kasusrsudbobbazar.github.io"
+baseurl:           "/kasusrsudbobbazar" # the subpath of your site, e.g. /blog/
+url:               "http://kasusrsudbobbazar.github.io" # the base hostname & protocol for your site
 
 # Social Profiles
 twitter_username:  SBootstrap
