--- a/startbootstrap-clean-blog-jekyll-master/_config.yml
+++ b/startbootstrap-clean-blog-jekyll-master/_config.yml
@@ -1,3 +1,4 @@
+### Site info:
 title:             Clean Blog
 email:             your-email@example.com
 description:       A Blog Theme by Start Bootstrap
